[#1] Replace gitara dsl with yaml like format.   Does not escape \.   Doesn't need to be sandboxed if uploaded by user.

--- a/lib/gitara/template/tab.mustache
+++ b/lib/gitara/template/tab.mustache
@@ -1,7 +1,8 @@
+{{=<% %>=}}
 \version "2.12.3"
 \include "english.ly"
 
-treble = { {{{tab.voice.first}}} }
+treble = { <%& tab.voice.value %> }
 
 \score {
   \new StaffGroup <<
