[#4] Generalize tab.erb: it should play whatever is the playable child, whether it's a note_set, bar, line, etc.

--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -4,7 +4,7 @@
 %-----------------------------------------------------------------------
 % Bars
 
-<% bars.each do |bar| %>
+<% playable_child.definitions(Node::Bar).each do |bar| %>
 <%= Gitara.render('bar', bar) %>
 <% end %>
 
