--- a/lib/gitara/template/bar.erb
+++ b/lib/gitara/template/bar.erb
@@ -1,3 +1,3 @@
-<% note_sets.each do |note_set| %>
-<%= note_set.definition_name %> = { <%= note_set.value %> }
+<% self.voiced_as(self.root.voices).each do |voiced_bar| %>
+<%= voiced_bar.definition_name %> = { <%= voiced_bar.matching_note_set.value %> }
 <% end %>
