--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -4,14 +4,14 @@
 %-----------------------------------------------------------------------
 % Bars
 
-<% definitions(Node::Bar).each do |bar| %>
+<% definitions(Gitara::Node::Bar).each do |bar| %>
 <%= Gitara.render('bar', bar) %>
 <% end %>
 
 %-----------------------------------------------------------------------
 % Lines
 
-<% definitions(Node::Line).each do |line| %>
+<% definitions(Gitara::Node::Line).each do |line| %>
 <%= Gitara.render('line', line) %>
 <% end %>
 
