[#10] I should be able to group musical expressions in a score.

--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -16,6 +16,13 @@
 <% end %>
 
 %-----------------------------------------------------------------------
+% Scores
+
+<% definitions(Gitara::Node::Score).each do |score| %>
+<%= Gitara.render('score', score) %>
+<% end %>
+
+%-----------------------------------------------------------------------
 % Voices
 
 <% voices.each do |voice| %>
