--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -16,6 +16,13 @@
 <% end %>
 
 %-----------------------------------------------------------------------
+% Stanzas
+
+<% definitions(Gitara::Node::Stanza).each do |stanza| %>
+<%= Gitara.render('stanza', stanza) %>
+<% end %>
+
+%-----------------------------------------------------------------------
 % Scores
 
 <% definitions(Gitara::Node::Score).each do |score| %>
