[#14] I should be able to define the tab's headers.

--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -5,6 +5,13 @@
  indent = #0
 }
 
+\header {
+  title = "<%= self.title %>"
+  composer = "<%= self.composer %>"
+  arranger = "<%= self.arranger %>"
+  instrument = "<%= self.instrument %>"
+}
+
 %-----------------------------------------------------------------------
 % Bars
 
