[#14] I should be able to define the tab's midi instrument.

--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -107,7 +107,7 @@ stanzaHeadings = {
 
 % showLastLength = R1*4
 \score {
-  \new Staff \with {midiInstrument = #"acoustic guitar (nylon)"} <<
+  \new Staff \with {midiInstrument = #"<%= self.midi_instrument %>"} <<
     \tempo 4 = 75
     \clef "treble_8"
 
