--- a/lib/gitara/template/voice.erb
+++ b/lib/gitara/template/voice.erb
@@ -1,1 +1,6 @@
-<%= definition_name %> = { <%= parent.playable_child.voiced_as(self).call_name %> }
+<%= definition_name %> = {
+  <% if self.transposition %>
+  \transposition <%= self.transposition %>
+  <% end %>
+  <%= parent.playable_child.voiced_as(self).call_name %>
+}
