--- a/lib/gitara/template/stanza.erb
+++ b/lib/gitara/template/stanza.erb
@@ -1,3 +1,4 @@
 <% self.voiced_as(self.root.voices).each do |voiced_stanza| %>
 <%= voiced_stanza.definition_name %> = { <%= voiced_stanza.children.map(&:call_name).join(' ') %> }
 <% end %>
+<%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
