--- a/lib/gitara/template/line.erb
+++ b/lib/gitara/template/line.erb
@@ -1,3 +1,4 @@
 <% self.voiced_as(self.root.voices).each do |voiced_line| %>
 <%= voiced_line.definition_name %> = { <%= voiced_line.children.map(&:call_name).join(' ') %> \break }
 <% end %>
+<%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
