--- a/lib/gitara/template/score.erb
+++ b/lib/gitara/template/score.erb
@@ -1,3 +1,4 @@
 <% self.voiced_as(self.root.voices).each do |voiced_score| %>
 <%= voiced_score.definition_name %> = { <%= voiced_score.children.map(&:call_name).join(' ') %> }
 <% end %>
+<%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
