[#17] If I render a part of the score, only the stanza heading for that part should appear.

--- a/lib/gitara/template/score.erb
+++ b/lib/gitara/template/score.erb
@@ -2,3 +2,4 @@
 <%= voiced_score.definition_name %> = { <%= voiced_score.value %> }
 <% end %>
 <%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
+<%= self.stanza_version.definition_name %> = { <%= self.stanza_version.value %> }
