--- a/lib/gitara/template/bar.erb
+++ b/lib/gitara/template/bar.erb
@@ -2,3 +2,4 @@
 <%= voiced_bar.definition_name %> = { <%= voiced_bar.matching_note_set.value %> }
 <% end %>
 <%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
+<%= self.stanza_version.definition_name %> = { <%= self.stanza_version.value %> }
