--- a/lib/gitara/template/line.erb
+++ b/lib/gitara/template/line.erb
@@ -2,3 +2,4 @@
 <%= voiced_line.definition_name %> = { <%= voiced_line.value %> \break }
 <% end %>
 <%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
+<%= self.stanza_version.definition_name %> = { <%= self.stanza_version.value %> }
