[#26] Fix: app does not render stanza names if bars are reused.

--- a/lib/gitara/template/stanza.erb
+++ b/lib/gitara/template/stanza.erb
@@ -2,4 +2,4 @@
 <%= voiced_stanza.definition_name %> = { <%= voiced_stanza.value %> }
 <% end %>
 <%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
-<%= self.stanza_version.definition_name %> = { <%= self.stanza_version.value %> }
+<%= self.stanza_version.definition_name %> = { <%= self.heading_in_lilypond %> }
