[#26] Remove stanza versions of bars and lines from generated lilypond.   Update tab.erb: stanzaHeadings should be blank if there are no stanzas.

--- a/lib/gitara/template/tab.erb
+++ b/lib/gitara/template/tab.erb
@@ -57,7 +57,11 @@
 %-----------------------------------------------------------------------
 % Stanza Headings
 
-stanzaHeadings = { <%= playable_child.stanza_version.call_name %> }
+stanzaHeadings = { 
+<%- if playable_child.descendants(Gitara::Node::Stanza).any? %>
+<%= playable_child.stanza_version.call_name %> 
+<% end %>
+}
 
 %-----------------------------------------------------------------------
 % Chord Headings
