--- a/lib/gitara/template/score.erb
+++ b/lib/gitara/template/score.erb
@@ -2,4 +2,6 @@
 <%= voiced_score.definition_name %> = { <%= voiced_score.value %> }
 <% end %>
 <%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
+<%- if self.descendants(Gitara::Node::Stanza).any? %>
 <%= self.stanza_version.definition_name %> = { <%= self.stanza_version.value %> }
+<% end %>
