[#27] Fix: chords stopped working with lilypond 2.14.   Solution: display chords with http://lilypond.org/doc/v2.14/Documentation/notation/displaying-chords.

--- a/lib/gitara/template/chord_set.erb
+++ b/lib/gitara/template/chord_set.erb
@@ -1,1 +1,1 @@
-<%= self.chorded.definition_name %> = { <%= self.chorded.value %> }
+<%= self.chorded.definition_name %> = { \chordmode { <%= self.chorded.value %> } }
